--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@icons-pack/react-simple-icons": "^4.6.1",
+    "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
