--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@icons-pack/react-simple-icons": "^4.6.1",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
